sending jwt in cookie